# phd_backup_full

./: .ycm_extra_conf.py  1introduction.tex  2background.tex  3blocalization.tex  3overview.tex  3overview2.tex  4localization.tex  5thickness.tex  5trajectory.tex  6thickness.tex  7code.tex  8testing.tex  9conclusions.tex  <internal>.dot  LMS1xx_node.cpp~  README.md  abstract.tex  appendix.tex  chap4.tex  data  dedication.tex  frames.gv  gmark.pcd  main.tex  map.pgm  mwe.tex  references.bib  results.tex  uoitthesis.cls
src/panel/: CMakeLists.txt  CMakeLists.txt~  package.xml~  plugin_description.xml  plugin_description.xml~
src/panel/configuration_files/: wrock_2d.lua  wrock_3d.lua  wrock_3d.lua~
src/panel/launch/: bringup.launch~  indigobringup.launch~
src/panel/src/: arm_state_publisher.cpp  basic_trajectory.cpp  cube_node.cpp  cube_node.cpp~  drive_widget.cpp  drive_widget.h~  laser_demo.cpp  laser_demo.cpp~  marker_node.cpp~  master-testing.cpp  master.cpp  pubmarker.cpp  pubmarker.cpp~  teleop_panel.cpp  teleop_panel.cpp~  teleop_panel.h  teleop_panel.h~
src/phd/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/phd/Latex Backup/: 1introduction.tex  1introduction2.tex  2background.tex  3localization.tex  4trajectory.tex  5thickness.tex  6overview.tex  7code.tex  7codelyx.tex  8testing.tex  9conclusions.tex  abstract.aux  abstract.lyx  abstract.tex  acknowledgements.aux  acknowledgements.lyx  acknowledgements.tex  appendix.aux  appendix.lyx  appendix.tex  appendix.tex.bak  background.aux  background.tex  code.aux  code.tex  code.tex.bak  codesectionbackup.txt  conclusions.aux  conclusions.tex  dedication.aux  dedication.lyx  external.c  introduction.aux  introduction.lyx  introduction.tex  introduction.tex.bak  localization.aux  localization.tex  main.aux  main.bbl  (+50 more)
src/phd/Latex Backup/CleanedCode/: CMakeLists.txt  CMakeLists.txt~  plugin_description.xml  plugin_description.xml~
src/phd/Latex Backup/CleanedCode/cfg/: base_local_planner_params.yaml~  costmap_common.yaml~  costmap_local.yaml~  localize_config.cfg~  my_laser_config.yaml  param_config.cfg~  rviz_scan.rviz  seg_config.cfg~  test.cfg~  trajectory_config.cfg  trajectory_config.cfg~
src/phd/Latex Backup/CleanedCode/include/: control_dashboard.h  control_dashboard.h~  control_panel.hpp~  marker_selector.h  pointcloud_utils.h~
src/phd/Latex Backup/CleanedCode/launch/: DEMO.launch  calibration.launch  calibration.launch~  cropping.launch~  denso.launch  master.launch  master.launch~  nav.launch  navtesting.launch~  noldav.launch  nonteb.launch  nonteb.launch~  remote.launch  remote.launch~  results.launch~  simnav.launch~  simulation.launch  simulation.launch~  tebnav.launch~  testing.launch  testing.launch~
src/phd/Latex Backup/CleanedCode/msg/: arm_msg.msg  arm_msg.msg~  cube_msg.msg  trajectory_array.msg~  trajectory_msg.msg  trajectory_point.msg  trajectory_section.msg~
src/phd/Latex Backup/CleanedCode/src/: control_dashboard.cpp  control_dashboard.cpp~  control_panel.cpp  control_panel.cpp~  control_panel.ui  denso_node.cpp  marker_selector.cpp  (+5 more)
src/phd/Latex Backup/Code/: control_panel.cpp  pointcloud_localization_service.cpp  simple_trajectory_service.cpp  thickness_service.cpp
src/phd/cfg/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common.yaml  costmap_common.yaml~  costmap_local.yaml  localize_config.cfg  localize_config.cfg~  my_laser_config.yaml  my_laser_config.yaml~  param_config.cfg  param_config.cfg~  planner.yaml  planner.yaml~  rviz_debug.rviz  rviz_scan.rviz  seg_config.cfg  trajectory_config.cfg  trajectory_config.cfg~
src/phd/docs/: ParamConfig-usage.dox  ParamConfig.dox  ParamConfig.wikidoc
src/phd/include/: control_dashboard.h  control_dashboard.h~  control_panel.hpp  control_panel.hpp~  marker_selector.h  marker_selector.h~  ui_resource.qrc  vel_control.hpp  vel_control.hpp~
src/phd/launch/: DEMO.launch~  amclnav.launch  amclnav.launch~  analyze.launch  analyze.launch~  calc.launch  calc.launch~  cartographer_3d.launch~  cropping.launch  denso.launch~  drive.launch  justsim.launch~  main.launch  main.launch~  master.launch  master.launch~  nav.launch  nav.launch~  navtesting.launch  results.launch  results.launch~  scanning.launch  scanning.launch~  simnav.launch  tebnav.launch  tebresulsts.launch  testing.launch  testing.launch~  trajectory.launch  trajectory.launch~  xresults.launch
src/phd/msg/: arm_msg.msg~  cube_msg.msg  doctor_msg.msg  doctor_msg.msg~  marker_msg.msg  marker_msg.msg~  marker_val.msg  marker_val.msg~  marker_vals.msg  marker_vals.msg~  trajectory_array.msg  trajectory_msg.msg~  trajectory_point.msg~  trajectory_section.msg  trajectory_test.msg~
src/phd/src/: accuracy_service.cpp  accuracy_service.cpp~  calc_service.cpp  calc_service.cpp~  calibration.cpp  calibration.cpp~  control_dashboard.cpp  control_dashboard.cpp~  control_panel.cpp  control_panel.cpp~  control_panel.ui  control_panel_pretty.ui  cube_node.cpp  cube_node.cpp~  denso_node.cpp  denso_node.cpp~  joint_state_fusion.cpp  joint_state_fusion.cpp~  laser_scan.cpp~  localize_bot.c  marker_selector.cpp  marker_selector.cpp~  parse_file.cpp  pointcloud_doctoring_service.cpp  pointcloud_doctoring_service.cpp~  pointcloud_localization_service.bak.cpp  pointcloud_localization_service.cpp  pointcloud_localization_service.cpp~  saveselection.cpp  simple_trajectory_service (converging lines_.cpp  simple_trajectory_service (line point plane location).cpp  simple_trajectory_service (nonlinear_broken).cpp  simple_trajectory_service (normal z or x cropping).cpp  simple_trajectory_service.cpp  simple_trajectory_service.cpp~  simple_trajectory_service_angles.cpp  simple_trajectory_service_normals.cpp  simple_trajectory_service_roof_and_wall.cpp  test_node.cpp  test_node.cpp~  (+7 more)
src/phd/srv/: accuracy_service.srv  calc_service.srv  calc_service.srv~  doctor_cloud.srv  doctor_cloud.srv~  empty.srv~  localize_cloud.srv  localize_cloud.srv~  thickness_service.srv~  trajectory_service (nonlinear).srv  trajectory_service.srv  trajectory_service.srv~
(+399 files in other folders)
